# royalroad-api-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/royalroad_api/: __init__.py  _parsing.py  errors.py  models.py  requester.py  royalroad.py
src/royalroad_api/parsers/: __init__.py  chapter.py  fiction.py  fictions.py  profile.py
src/royalroad_api/services/: __init__.py  chapter.py  fiction.py  fictions.py  profile.py
test/: test_chapter_parser.py  test_fiction_parser.py  test_fictions_parser.py  test_fictions_service.py  test_profile_parser.py
test/fixtures/: active-popular.html  chapter-comments.html  chapter.html  fiction.html  profile.html  reviews.html
