[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "royalroad-api"
dynamic = ["version"]
description = "Minimal Python RoyalRoad API (port of @fsoc/royalroadl-api)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["royalroad", "api", "scraper"]
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.hatch.version]
path = "src/royalroad_api/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/royalroad_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
